Add Raft cluster sizing requirements (NFR §16 + ADR §5.1)
Documents N=2F+1 quorum formula, minimum 3-voting-node configuration,
5-node (3 voting + 2 learner) financial-grade production recommendation,
and diminishing returns analysis beyond 5 nodes.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>